# frame2app

./: README.md  pyproject.toml
examples/: frame2app_all_tests.ipynb  test_frame2app.py
frame2app/: __init__.py  core.py
