[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "frame2app"
version = "0.1.0"
description = "Flexible DataFrame-based GUI builder for Colab and Jupyter using ipywidgets."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Furqan Rustam", email = "furqan.rustam1@gmail.com" }
]
keywords = [
    "ipywidgets",
    "jupyter",
    "colab",
    "gui",
    "dataframe",
    "pandas",
    "form-builder",
    "machine-learning",
    "notebook"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: Jupyter",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: User Interfaces"
]
dependencies = [
    "pandas>=1.3",
    "ipywidgets>=8.0",
    "IPython>=7.0"
]

[project.urls]
Homepage = "https://github.com/furqanrustam/frame2app"
Repository = "https://github.com/furqanrustam/frame2app"
Issues = "https://github.com/furqanrustam/frame2app/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["frame2app*"]
